# mighty-morphin-mathemagical-wavetables

./: .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CI_OPTIMIZATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  MODERNIZATION.md  Makefile  PIP.MD  PROJECT_REVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RUFF_MIGRATION.md  SECURITY.md  auto_activate.sh  justfile  lint-black-isort-mypy-flake8-black.md  package-lock.json  package.json  pyproject.toml  setup.sh  wavetable-generator.code-workspace
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: Mighty_Morphin_Agent.agent.md  mighty-morphin-dev.agent.md  mighty-morphin-maintainer-dev.agent.md  my-agent.agent.md
.github/chatmodes/: mighty-morphin-dev.chatmode.md  mighty-morphin-maintainer-dev.chatmode.md
.github/workflows/: ci.yml  codeql.yml
.husky/: README.md  pre-commit
docs/: development-setup.md  pathlib-guide.md  radian-pi-phase-frequency.md  uv-guide.md  wavetable_generators.md
docs_tech/: husky.md  python.md
wavetable_generators/: __init__.py  example.py  linear_interpolation.py  sine_to_triangle.py  square_pwm_tz.py
wavetable_synthesis/: __init__.py  __main__.py
wavetable_synthesis/cli/: __init__.py  cli.py  test_cli.py
wavetable_synthesis/core/: __init__.py  base_generator.py  config.py  constants.py  decorator_registry.py  generator.py  processing.py  registry.py  types.py  wavetable_generator.py
wavetable_synthesis/export/: __init__.py  wav.py
wavetable_tests/: conftest.py  test_advanced.py  test_cli.py  test_integration.py  test_validation.py  test_wavetable_generation.py
