[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mighty-morphin-mathemagical-wavetables"
version = "0.1.0"
description = "Mighty Morphin Mathemagical Wavetables - Where math meets magic in wavetable synthesis"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Kristoffer Ekstrand", email = "kristoffer.ekstrand@gmail.com"},
]
maintainers = [
    {name = "Kristoffer Ekstrand", email = "kristoffer.ekstrand@gmail.com"},
]
keywords = ["wavetable", "synthesis", "audio", "dsp", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Synthesis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=2.0.0",
    "soundfile>=0.13.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    # Linting and formatting
    "ruff>=0.9.0",
    # Type checking
    "mypy>=1.13.0",
    # Security
    "bandit[toml]>=1.8.0",
    # Pre-commit hooks
    "pre-commit>=4.0.0",
]
web = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
wavetable = "wavetable_synthesis.cli.cli:main"
run-tests = "wavetable_synthesis.cli.test_cli:main"

[project.urls]
Homepage = "https://github.com/KristofferKarlAxelEkstrand/mighty-morphin-mathemagical-wavetables"
Documentation = "https://github.com/KristofferKarlAxelEkstrand/mighty-morphin-mathemagical-wavetables#readme"
Repository = "https://github.com/KristofferKarlAxelEkstrand/mighty-morphin-mathemagical-wavetables.git"
Issues = "https://github.com/KristofferKarlAxelEkstrand/mighty-morphin-mathemagical-wavetables/issues"
Changelog = "https://github.com/KristofferKarlAxelEkstrand/mighty-morphin-mathemagical-wavetables/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "docs*"]

[tool.setuptools.package-data]
"wavetable_synthesis" = ["wavetable_generators/*.py"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "soundfile.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "test_basic",
    "test_advanced",
    "test_integration",
    "test_wavetable_generation"
]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=wavetable_synthesis --cov-report=term-missing"
testpaths = [
    "wavetable_tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["wavetable_synthesis"]
omit = [
    "*/wavetable_tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Ruff - Modern, fast Python linter and formatter
# Replaces: Black, isort, Flake8, and many pylint rules
# Documentation: https://docs.astral.sh/ruff/
[tool.ruff]
target-version = "py310"
line-length = 128
extend-exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "wavetable_dist",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
# Enable recommended rules plus additional quality checks
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]

# Disable specific rules that conflict with project style
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
    "ISC001",   # Conflicts with formatter
    "COM812",   # Trailing comma conflicts with formatter
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"wavetable_tests/**" = ["ARG", "PLR"]  # Relax argument and complexity rules in tests
"wavetable_generators/**" = ["PLR0915"]  # Allow more statements in generator implementations

[tool.ruff.lint.isort]
known-first-party = ["wavetable_synthesis"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["wavetable_tests", "wavetable_generators", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check (OK in tests)
